migrating from JDBC to JPA(2/4)