@@ -9,7 +9,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Controller
 public class HolidaysController {
@@ -40,13 +40,19 @@ public class HolidaysController {
 //                new Holiday(" Nov 11 ","Veterans Day", Holiday.Type.FEDERAL)
 //        );
 
-        List<Holiday> holidays = holidaysRepository.findAllHolidays();
-
+//        List<Holiday> holidays = holidaysRepository.findAllHolidays();
+        Iterable<Holiday> holidays = holidaysRepository.findAll();
+        //Iterable: general collection type > Collection > List, Set
+        //Stream: a separate hierarchy
+        List<Holiday> holidayList = StreamSupport.stream(holidays.spliterator(), false).toList();
+        //StreamSupport: provides methods to create streams from various sources
+        //spliterator()는 Iterable를 Spliterator로 반환, StreamSupport.stream()는 Spliterator를 stream으로 변환
         Holiday.Type[] types = Holiday.Type.values();
         for (Holiday.Type type : types){
             /**위의 holidays list로부터 model attibute name이 각각 FESTIVAL, FEDERAL이고, value가 element가 holiday인 list가 만들어짐*/
             model.addAttribute(type.toString(),
-                    (holidays.stream().filter(holiday -> holiday.getType().equals(type))).collect(Collectors.toList())
+//                    (holidays.stream().filter(holiday -> holiday.getType().equals(type))).collect(Collectors.toList())
+                    (holidayList.stream().filter(holiday->holiday.getType().equals(type)).toList())
             );
         }
         return "holidays.html";
